Desktop view completed

--- a/index.html
+++ b/index.html
@@ -8,12 +8,6 @@
   
   <title>Frontend Mentor | Tip calculator app</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-    </style>
-
   <script type="module" src="/main.js" defer></script>
 </head>
 <body>
@@ -58,7 +52,7 @@
   </main>
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Samuel Pletain</a>.
+    Coded by <a href="https://github.com/samuelpletain">Samuel Pletain</a>.
   </footer>
 </body>
 </html>
